--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.12",
     "@clerk/themes": "^2.2.26",
+    "@livekit/components-react": "^2.9.3",
+    "@livekit/components-styles": "^1.1.5",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "livekit-client": "^2.11.4",
+    "livekit-server-sdk": "^2.12.0",
     "lucide-react": "^0.484.0",
+    "nanoid": "^5.1.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
